# simple-vector

./: .gitignore  CMakeLists.txt  conf.ini  filter.md  wal.md
doc/: master.md  persistence.md  proxy.md  raft.md  scalar.md  wal.md
include/: FaissIndex.h  HttpServer.h  IndexFactory.h  backtrace.h  constants.h  faiss_index.h  filter_index.h  hnswlib_index.h  http_server.h  in_mem_log_store.h  in_mem_state_mgr.h  index_factory.h  log_state_machine.h  logger.h  persistence.h  raft_logger.h  raft_logger_wrapper.h  raft_stuff.h  scalar_storage.h  vector_database.h
master-server/include/: master_server.h
master-server/src/: master_server.cc
proxy-server/include/: proxy_server.h
proxy-server/src/: proxy_server.cc  vdb_server_proxy.cc
src/: FaissIndex.cc  HttpServer.cc  faiss_index.cc  filter_index.cc  hnswlib_index.cc  http_server.cc  in_mem_log_store.cc  index_factory.cc  log_state_machine.cc  logger.cc  main.cc  persistence.cc  raft_logger.cc  raft_stuff.cc  scalar_storage.cc  vector_database.cc
test/distributed/: addFollower.sh  addNode2.sh  addNode3.sh  build.sh  clean.sh  getNode1.sh  getNode2.sh  listNode.sh  setLeader.sh
test/filter_upsert/: search_equal.json  search_equal.sh  search_normal.json  search_unequal.json  search_unequal.sh  test.sh  upsert.json  upsert_1.json  upsert_2.json  upsert_3.json  upsert_4.json
test/master-server/: addNode.sh  listNode.sh  listPartition.sh
test/proxy/: addNode.sh  topo.sh
test/snapshot/: test.sh
